# backend/handler/user.go
@@ -53,6 +53,40 @@ func (s *UserServer) GetUser(ctx context.Context, req *pd.GetUserByIDRequest) (*
 
 	return &responseUser, nil
 }
+func (s *UserServer) GetMe(ctx context.Context, req *pd.Empty) (*pd.GetUserByIDResponse, error) {
+	log.Println("GetMe called")
+
+	// JWTからuserIDを取得
+	userID, err := utils.ExtractUserIDFromContext(ctx)
+	if err != nil {
+		log.Printf("Failed to extract userID from JWT: %v", err)
+		return &pd.GetUserByIDResponse{}, err
+	}
+
+	user, err := s.userRepo.GetByID(ctx, userID)
+	if err != nil {
+		log.Printf("GetMe error: %v", err)
+		return &pd.GetUserByIDResponse{}, err
+	}
+
+	responseUser := pd.GetUserByIDResponse{
+		User: &pd.User{
+			Id:             user.ID.String(),
+			Name:           user.Name,
+			Description:    user.Description,
+			Image:          user.Image,
+			FollowerCount:  user.FollowerCount,
+			FollowingCount: user.FollowingCount,
+			CreatedAt:      user.CreatedAt.Format(time.RFC3339),
+			UpdatedAt:      user.UpdatedAt.Format(time.RFC3339),
+			Followers:      []string{},
+			Followings:     []string{},
+		},
+	}
+	s.userRepo.CalcFollowRelations(ctx, &responseUser)
+
+	return &responseUser, nil
+}
 
 func (s *UserServer) EditUser(ctx context.Context, req *pd.EditUserRequest) (*pd.StandardResponse, error) {
 	log.Println("EditUser called")
